# prog2002_tester

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
CMake/: ModuleTest.cmake  TestDriverBeforeTest.inc
CMake/Modules/: OutputTest.cmake  RenderdocTest.cmake  RunAndCompare.cmake  RunAndRedirect.cmake  RunTests.cmake  TestManager.cmake  Tests.cmake
data/reference/: Lab00_Test_01_in.txt
framework/: graphics_framework.cpp  graphics_framework.hpp  renderdoc.cpp  renderdoc.hpp  renderdoc_helper.cpp  renderdoc_helper.hpp
include/: graphics_framework.hpp
modules/: RenderdocTest.cmake  Tests.cmake
src/: file_manager.cpp  file_manager.hpp  framework.cpp  graphics_framework.cpp  main.cpp  student.cpp  student.hpp
src/testing/: renderdoc_helper.cpp  renderdoc_helper.hpp  renderdoc_test.cpp  tester.cpp  tester.hpp
test/: RenderdocTest.cmake
tests/: CMakeLists.txt  EnabledTests.txt  RenderdocTest.cmake  renderdoc_helper.cpp  renderdoc_helper.hpp  renderdoc_test.cpp  runtests.cmake  test_1.cxx  test_2.cxx  test_extra_stuff.cpp
